[package]
name = "aster"
version = "0.9.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A libsyntax ast builder"
repository = "https://github.com/serde-rs/aster"

[features]
with-syntex = ["syntex_syntax"]
unstable = ["clippy", "compiletest_rs"]

[dependencies]
syntex_syntax = { version = "^0.23.0", optional = true }
clippy = { version = "^0.0.22", optional = true }
compiletest_rs = { version = "^0.0.10", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"
