[package]
name = "aster"
version = "0.37.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A libsyntax ast builder"
repository = "https://github.com/serde-rs/aster"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
with-syntex = ["syntex_syntax"]

# Clippy is currently broken on nightly
#unstable-testing = ["clippy", "compiletest_rs"]
unstable-testing = ["compiletest_rs"]

[dependencies]
syntex_syntax = { version = "^0.54.0", optional = true }
clippy = { version = "0.*", optional = true }
compiletest_rs = { version = "^0.2.0", optional = true }

[[test]]
name = "test"
path = "tests/test.rs"
